--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,22 @@
 .App {
   text-align: center;
   background-size: cover;
-  background-image: linear-gradient(rgb(0, 4, 41), rgb(23, 27, 62));
-  height: 100vh;
+  background-image: linear-gradient(rgb(151, 151, 151), rgb(23, 27, 62));
+  height: 180vh;
   width: 100vw;
-  margin-top: -1.1%;
+  margin-top: -5.1%;
 }
 
 #headerStyle {
-  color: aquamarine;
+  color: rgb(224, 71, 32);
+}
+
+#titleContainer {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-left: 4%;
+  margin-top: 5%;
 }
 
 #buttonContainer {
@@ -17,25 +25,22 @@
   flex-wrap: wrap;
 }
 
+#cartImg {
+  width: 50px;
+  height: 50px;
+  margin-top: 50%;
+}
+
 #popUpBox {
   width: 90vw;
   height: 90vh;
   position: fixed; 
+  display: flex;
+  justify-content: space-around;
   top: 3%; 
   left: 5%;
   background-color: rgba(0, 0, 0, 0.71);
   border-radius: 25px;
-}
-
-#closeX {
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  background-color: rgba(255, 255, 255, 0.491);
-  text-align: center;
-  border-radius: 25px;
-  margin-left: 98%;
-  margin-top: -39%;
 }
 
 #buttonStyling {
@@ -43,6 +48,16 @@
   -moz-appearance: none;
   appearance: none;
   margin-top: 5%;
+}
+
+#catImg {
+  height: 300px;
+  width: 300px;
+}
+
+#catImg2 {
+  height: 70vh;
+  width: 70vh;
 }
 
 .buttonStyleRemove {
@@ -59,5 +74,5 @@
   margin-top: 3%;
   font-size: 8em;
   font-weight: bolder;
-  color: aquamarine;
+  color: rgb(224, 71, 32);
 }
